More misc fixes, banner patterns